# Online_Learning_project

./: README.md  pyproject.toml
config/: settings.py  urls.py
lms/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: payments.json
users/migrations/: 0001_initial.py
