[project]
name = "online-learning-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Tem Temich (Deckop)",email = "khxkxmxv@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "djangorestframework-stubs (>=3.16.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
